# min_sender

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  V4-563.ioc
Core/Inc/: FreeRTOSConfig.h  app_freertos.h  ffconf.h  main.h  sd_diskio_config.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: app_freertos.c  ff_sddisk.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
FATFS/App/: ffconf.h  sram_diskio.h
FreeRTOSPlusFatPort/: CMakeLists.txt  ff_sddisk.c
FreeRTOSPlusFatPort/FreeRTOS-Plus-FAT/portable/: CMakeLists.txt
FreeRTOSPlusFatPort/FreeRTOS-Plus-FAT/portable/STM32Hxx/: ff_sddisk.c
Middleware/FreeRTOSPlusFatPort/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
